--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pandas = "^1.5.2"
+nltk = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 
