--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.9"
 pandas = "^1.5.2"
 nltk = "^3.8.1"
 wordcloud = "^1.8.2.2"
+matplotlib = "^3.6.3"
+numpy = "^1.24.1"
 
 [tool.poetry.dev-dependencies]
 
