--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ numpy = "^1.24.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
+codecov = "^2.1.12"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version" # version location
