--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ numpy = "^1.24.1"
 pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
 codecov = "^2.1.12"
+myst-nb = {version = "^0.17.1", python = "^3.9"}
+sphinx-autoapi = "^2.0.1"
+sphinx-rtd-theme = "^1.1.1"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version" # version location
