--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ codecov = "^2.1.12"
 myst-nb = {version = "^0.17.1", python = "^3.9"}
 sphinx-autoapi = "^2.0.1"
 sphinx-rtd-theme = "^1.1.1"
+python-semantic-release = "^7.33.0"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version" # version location
