--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ sphinx-rtd-theme = "^1.1.1"
 python-semantic-release = "^7.33.0"
 
 [tool.semantic_release]
-version_variable = "pysentimentanalyzer/__init__.py:__version__" # version location
+version_variable = "pyproject.toml:version" # version location
 branch = "main"                             # branch to make releases of
 changelog_file = "CHANGELOG.md"             # changelog file
 build_command = "poetry build"              # build dists
